//----------------------------------------------------------------------------
// copyright 2025, jessa gillespie, all rights reserved.
//----------------------------------------------------------------------------

#include "JointTableMan.h"
#include "DLinkMan.h"
#include "JointTableProto.h"
#include "File.h"

namespace Azul
{

	JointTableMan *JointTableMan::posInstance = nullptr;

	//----------------------------------------------------------------------
	// Constructor
	//----------------------------------------------------------------------
	JointTableMan::JointTableMan(int reserveNum, int reserveGrow)
		: ManBase(new DLinkMan(), new DLinkMan(), reserveNum, reserveGrow)
	{
		// Preload the reserve
		this->proFillReservedPool(reserveNum);

		// initialize derived data here
		this->poNodeCompare = new JointTable();
	}

	JointTableMan::~JointTableMan()
	{
		delete this->poNodeCompare;
		this->poNodeCompare = nullptr;

		// iterate through the list and delete
		Iterator *pIt = this->baseGetActiveIterator();

		DLink *pNode = pIt->First();

		// Walk through the nodes
		while(!pIt->IsDone())
		{
			JointTable *pDeleteMe = (JointTable *)pIt->Curr();
			pNode = pIt->Next();
			delete pDeleteMe;
		}

		pIt = this->baseGetReserveIterator();

		pNode = pIt->First();

		// Walk through the nodes
		while(!pIt->IsDone())
		{
			JointTable *pDeleteMe = (JointTable *)pIt->Curr();
			pNode = pIt->Next();
			delete pDeleteMe;
		}
	}

	//----------------------------------------------------------------------
	// Static Methods
	//----------------------------------------------------------------------
	void JointTableMan::Create(int reserveNum, int reserveGrow)
	{
		// make sure values are ressonable 
		assert(reserveNum >= 0);
		assert(reserveGrow > 0);

		// initialize the singleton here
		assert(posInstance == nullptr);

		// Do the initialization
		if(posInstance == nullptr)
		{
			posInstance = new JointTableMan(reserveNum, reserveGrow);
		}

	}

	void JointTableMan::Destroy()
	{
		JointTableMan *pMan = JointTableMan::privGetInstance();
		assert(pMan != nullptr);
		AZUL_UNUSED_VAR(pMan);

		delete JointTableMan::posInstance;
		JointTableMan::posInstance = nullptr;
	}

	JointTable *JointTableMan::Add(const char *pFileName, JointTable::Name JointTableName)
	{
		JointTableMan *pMan = JointTableMan::privGetInstance();
		assert(pMan);

		JointTable *pNode = (JointTable *)pMan->baseAddToFront();
		assert(pNode != nullptr);


		assert(pFileName);

		unsigned char *poBuff;
		unsigned int numBytes;

		File::Error ferror;
		ferror = File::GetFileAsBuffer(pFileName, poBuff, numBytes);
		assert(ferror == File::Error::SUCCESS);

		// Now the raw data is poBUff
		// deserialize the data --> mB
		std::string strIn((const char *)poBuff, numBytes);
		JointData_proto mB_proto;

		mB_proto.ParseFromString(strIn);

		JointData mB;
		mB.Deserialize(mB_proto);
		delete[] poBuff;

		pNode->Set(JointTableName, mB.numJoints, &mB.poJointEntry[0]);

		return pNode;
	}


	JointTable *JointTableMan::Find(JointTable::Name _name)
	{
		JointTableMan *pMan = JointTableMan::privGetInstance();
		assert(pMan != nullptr);

		// Compare functions only compares two Nodes

		// So:  Use the Compare Node - as a reference
		//      use in the Compare() function
		pMan->poNodeCompare->SetJointTableName(_name);

		JointTable *pData = (JointTable *)pMan->baseFind(pMan->poNodeCompare);
		return pData;
	}


	void JointTableMan::Remove(JointTable *pNode)
	{
		assert(pNode != nullptr);

		JointTableMan *pMan = JointTableMan::privGetInstance();
		assert(pMan != nullptr);

		pMan->baseRemove(pNode);
	}

	void JointTableMan::Dump()
	{
		JointTableMan *pMan = JointTableMan::privGetInstance();
		assert(pMan != nullptr);

		pMan->baseDump();
	}

	//----------------------------------------------------------------------
	// Private methods
	//----------------------------------------------------------------------
	JointTableMan *JointTableMan::privGetInstance()
	{
		// Safety - this forces users to call Create() first before using class
		assert(posInstance != nullptr);

		return posInstance;
	}

	//----------------------------------------------------------------------
	// Override Abstract methods
	//----------------------------------------------------------------------
	DLink *JointTableMan::derivedCreateNode()
	{
		DLink *pNodeBase = new JointTable();
		assert(pNodeBase != nullptr);

		return pNodeBase;
	}
}

// --- End of File ---
